Cambios Minusculas a mayusculas

--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -32,8 +32,8 @@
     <ul class="hidden md:flex gap-8 font-medium">
       <li><a href="index.html" class="hover:text-[var(--magenta)]">Inicio</a></li>
       <li><a href="QuienesSomos.html" class="hover:text-[var(--magenta)]">Nosotros</a></li>
-      <li><a href="servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
-      <li><a href="contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
+      <li><a href="Servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
+      <li><a href="Contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
     </ul>
 
     <button id="menu-btn" class="md:hidden text-[var(--magenta)]">
@@ -49,8 +49,8 @@
     <ul class="flex flex-col items-center gap-4 py-4 font-medium">
       <li><a href="index.html" class="hover:text-[var(--magenta)]">Inicio</a></li>
       <li><a href="QuienesSomos.html" class="hover:text-[var(--magenta)]">Nosotros</a></li>
-      <li><a href="servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
-      <li><a href="contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
+      <li><a href="Servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
+      <li><a href="Contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
     </ul>
   </div>
 </header>
@@ -148,7 +148,7 @@
     <p class="text-base md:text-lg mb-6 text-gray-700">
       Escríbenos y llevemos tu identidad digital a otro nivel con estrategia, creatividad y visión.
     </p>
-    <a href="contacto.html" class="inline-block bg-[var(--magenta)] hover:bg-[var(--morado)] text-white font-semibold py-3 px-8 rounded-full transition-colors duration-300">
+    <a href="Contacto.html" class="inline-block bg-[var(--magenta)] hover:bg-[var(--morado)] text-white font-semibold py-3 px-8 rounded-full transition-colors duration-300">
       Contáctanos
     </a>
   </div>
