--- a/Contacto.html
+++ b/Contacto.html
@@ -44,8 +44,8 @@
     <ul class="hidden md:flex gap-8 font-medium">
       <li><a href="index.html" class="hover:text-[var(--magenta)]">Inicio</a></li>
       <li><a href="QuienesSomos.html" class="hover:text-[var(--magenta)]">Nosotros</a></li>
-      <li><a href="servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
-      <li><a href="contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
+      <li><a href="Servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
+      <li><a href="Contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
     </ul>
     <button id="menu-btn" class="md:hidden text-[var(--magenta)]">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none"
@@ -60,8 +60,8 @@
     <ul class="flex flex-col items-center gap-4 py-4 font-medium">
       <li><a href="index.html" class="hover:text-[var(--magenta)]">Inicio</a></li>
       <li><a href="QuienesSomos.html" class="hover:text-[var(--magenta)]">Nosotros</a></li>
-      <li><a href="servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
-      <li><a href="contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
+      <li><a href="Servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
+      <li><a href="Contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
     </ul>
   </div>
 </header>
