--- a/Servicios.html
+++ b/Servicios.html
@@ -37,8 +37,8 @@
     <ul class="hidden md:flex gap-8 font-medium">
       <li><a href="index.html" class="hover:text-[var(--magenta)]">Inicio</a></li>
       <li><a href="QuienesSomos.html" class="hover:text-[var(--magenta)]">Nosotros</a></li>
-      <li><a href="servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
-      <li><a href="contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
+      <li><a href="Servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
+      <li><a href="Contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
     </ul>
     <button id="menu-btn" class="md:hidden text-[var(--magenta)]">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none"
@@ -54,8 +54,8 @@
     <ul class="flex flex-col items-center gap-4 py-4 font-medium">
       <li><a href="index.html" class="hover:text-[var(--magenta)]">Inicio</a></li>
       <li><a href="QuienesSomos.html" class="hover:text-[var(--magenta)]">Nosotros</a></li>
-      <li><a href="servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
-      <li><a href="contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
+      <li><a href="Servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
+      <li><a href="Contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
     </ul>
   </div>
 </header>
@@ -100,7 +100,7 @@
           <h4 class="font-semibold text-[var(--magenta)]">🎯 Objetivo Principal</h4>
           <p class="text-sm text-gray-600">Brindar una imagen profesional y coherente para empezar a posicionarse.</p>
         </div>
-        <a href="contacto.html" class="bg-[var(--magenta)] text-white py-3 px-6 rounded-full text-center hover:bg-[var(--morado)] transition">Contratar ahora</a>
+        <a href="Contacto.html" class="bg-[var(--magenta)] text-white py-3 px-6 rounded-full text-center hover:bg-[var(--morado)] transition">Contratar ahora</a>
       </div>
 
       <!-- Paquete Impulso -->
@@ -121,7 +121,7 @@
           <h4 class="font-semibold text-[var(--magenta)]">🎯 Objetivo Principal</h4>
           <p class="text-sm text-gray-600">Fortalecer la visibilidad y generar conexión real con el público.</p>
         </div>
-        <a href="contacto.html" class="bg-[var(--magenta)] text-white py-3 px-6 rounded-full text-center hover:bg-[var(--morado)] transition">Contratar ahora</a>
+        <a href="Contacto.html" class="bg-[var(--magenta)] text-white py-3 px-6 rounded-full text-center hover:bg-[var(--morado)] transition">Contratar ahora</a>
       </div>
 
       <!-- Expansión Total -->
@@ -143,7 +143,7 @@
           <h4 class="font-semibold text-[var(--magenta)]">🎯 Objetivo Principal</h4>
           <p class="text-sm text-gray-600">Reinventar la marca para posicionarla como líder en su sector.</p>
         </div>
-        <a href="contacto.html" class="bg-[var(--magenta)] text-white py-3 px-6 rounded-full text-center hover:bg-[var(--morado)] transition">Contratar ahora</a>
+        <a href="Contacto.html" class="bg-[var(--magenta)] text-white py-3 px-6 rounded-full text-center hover:bg-[var(--morado)] transition">Contratar ahora</a>
       </div>
     </div>
   </section>
@@ -153,7 +153,7 @@
     <p class="text-base sm:text-lg text-gray-700 mb-6">
       ¿No sabes qué plan elegir? Escríbenos y te asesoramos personalmente.
     </p>
-    <a href="contacto.html" class="bg-[var(--magenta)] hover:bg-[var(--morado)] text-white py-3 px-8 rounded-full transition">
+    <a href="Contacto.html" class="bg-[var(--magenta)] hover:bg-[var(--morado)] text-white py-3 px-8 rounded-full transition">
       Hablar con nosotras
     </a>
   </section>
