--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <ul class="hidden md:flex gap-8 font-medium">
         <li><a href="index.html" class="hover:text-[var(--magenta)]">Inicio</a></li>
         <li><a href="QuienesSomos.html" class="hover:text-[var(--magenta)]">Nosotros</a></li>
-        <li><a href="servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
-        <li><a href="contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
+        <li><a href="Servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
+        <li><a href="Contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
       </ul>
       <button id="menu-btn" class="md:hidden text-[var(--magenta)]">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none"
@@ -51,8 +51,8 @@
       <ul class="flex flex-col items-center gap-4 py-4 font-medium">
         <li><a href="index.html" class="hover:text-[var(--magenta)]">Inicio</a></li>
         <li><a href="QuienesSomos.html" class="hover:text-[var(--magenta)]">Nosotros</a></li>
-        <li><a href="servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
-        <li><a href="contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
+        <li><a href="Servicios.html" class="hover:text-[var(--magenta)]">Servicios</a></li>
+        <li><a href="Contacto.html" class="hover:text-[var(--magenta)]">Contacto</a></li>
       </ul>
     </div>
   </header>
@@ -77,7 +77,7 @@
       <p class="text-gray-600 text-lg mb-6">
         Impulsamos marcas y emprendimientos a destacar en el mundo digital creando contenidos auténticos que fortalecen su identidad y conectan con su audiencia.
       </p>
-      <a href="servicios.html"
+      <a href="Servicios.html"
          class="bg-[var(--magenta)] text-white px-6 py-3 rounded-full hover:bg-[var(--morado)] transition">
         Ver Servicios
       </a>
@@ -104,7 +104,7 @@
     <p class="text-gray-600 mb-8">
       Descubre cómo podemos ayudarte a crear una presencia digital sólida y coherente.
     </p>
-    <a href="contacto.html"
+    <a href="Contacto.html"
        class="bg-[var(--magenta)] text-white px-6 py-3 rounded-full hover:bg-[var(--morado)] transition">
       Contáctanos
     </a>
